[package]
edition = "2021"
name = "win_async"
version = "0.1.0"

[dependencies]
mio = {version = "0.8.8", features = [
  "net",
  "os-poll",
  "os-ext",
]}
windows-sys = {version = "0.48.0", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_Networking_WinSock",
  "Win32_System_IO",
  "Win32_System_WindowsProgramming",
]}
